--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+ul {
+	margin: 0 0;
+}
+
 .App {
-  text-align: center;
+	display: flex;
+	flex-direction: row;
+	padding: 50px;
+	gap: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Box {
+	display: flex;
+	width: max-content;
+	padding: 20px;
+	border-radius: 11px;
+	background-color: white;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button,
+input[type='submit'] {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 6px 14px;
+	border: none;
+	border-radius: 6px;
+
+	background: white;
+	box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
+		0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+	color: black;
+	font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
+	touch-action: manipulation;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:focus,
+input[type='submit']:focus {
+	outline: 0;
+	box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1),
+		0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
 }
